--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Example: importing Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
